[package]
name = "content_disposition"
version = "0.4.0"
edition = "2021"

description = "Content-Disposition parser"
homepage = "https://github.com/y0zong/content-disposition/blob/master/README.md"
repository = "https://github.com/y0zong/content-disposition"
keywords = ["parser", "content-disposition", "mime", "http", "http2"]
categories = ["parsing"]
exclude = [".gitattributes", ".gitignore", ".github/**", "examples/**"]
readme = "README.md"
license = "MIT OR 0BSD"

[dependencies]
charset = "0.1.5"
